# unicork-api

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
products/: admin.py  models.py
products/migrations/: 0001_initial.py  0002_product_discount_price.py  0003_picture_product_product_description_and_more.py  0004_rename_picture_productpicture.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_admin.py
